--- a/WebApp/templates/addDoctor.html
+++ b/WebApp/templates/addDoctor.html
@@ -1,62 +1,56 @@
 {% extends 'main.html' %}
 
 {% block content %}
-
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Add Doctor</title>
+    </head>
+    <body class="">
+        <div id="layoutAuthentication">
+            <div id="layoutAuthentication_content">
+                <main>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-5">
+                                <div class="card shadow-lg border-0 rounded-lg mt-5">
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Add Doctor</h3></div>
+                                    <div class="card-body">
+                                        <form action="" method="post">
+                                            {% csrf_token %}
+                                            <dl class="row">
+                                                <dt class="col-6">Name</dt>
+                                                <dd class="col-6"><input type="text" name="fullname" required></dd>
 
-<head>
-    <!-- Required meta tags always come first -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    
-    <title>Liver Disease Classification</title>
-</head>
-
-<body id="body">
-
-    <div class="container" id="breadcrumb">
-        <div class="row">
-            <ol class="col-12 breadcrumb">
-               <li class="breadcrumb-item"><a href="doctors.html">Doctors</a></li>
-               <li class="breadcrumb-item active">Add Doctor</li>
-            </ol>
-        </div>
-    </div>
-
-    <div class="row row-content align-items-center">
-
-        <div class="col"></div>
-
-        <div class="col-md-6 align-items-center">
-            <div class="card">
-                <h3 class="card-header text-black">Add Doctor</h3>
-                <div class="card-body">
-                    <form action="" method="post">
-                        {% csrf_token %}
-                        <dl class="row">
-                            <dt class="col-6">Name</dt>
-                            <dd class="col-6"><input type="text" name="fullname" required></dd>
-
-                            <dt class="col-2"><input type="submit" name="" id=""></dt>
-                        </dl>
-                    </form>
-                    
-                </div>
+                                                <dt class="col-2"><input type="submit" name="" id=""></dt>
+                                            </dl>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+            </div>
+            <div id="layoutAuthentication_footer">
+                <footer class="py-4 bg-light mt-auto">
+                    <div class="container-fluid px-4">
+                        <div class="d-flex align-items-center justify-content-between small">
+                            <div class="text-muted">Copyright &copy; Your Website 2021</div>
+                            <div>
+                                <a href="#">Privacy Policy</a>
+                                &middot;
+                                <a href="#">Terms &amp; Conditions</a>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
             </div>
         </div>
-
-        <div class="col"></div>
-    </div>
-
-
-
-
-
-</body>
-
+    </body>
 </html>
-
 {% endblock content %}
