--- a/WebApp/templates/profile.html
+++ b/WebApp/templates/profile.html
@@ -45,7 +45,7 @@
                     <dd class="col-6">{{patient.birth_date}}</dd>
                 </dl>
                 <div class="col-md-2 mt-5">
-                    <button onclick="toggleEditReport"><span class="fa fa-edit fa-lg"></span></button>
+                    <!-- <button onclick="toggleEditReport"><span class="fa fa-edit fa-lg"></span></button> -->
                 </div>
             </div>
         </div>
@@ -59,6 +59,7 @@
                     <th>Patient Name</th>
                     <th>Pathologist</th>
                     <th>Date</th>
+                    <th></th>
                 </tr>
             </thead>
             {% for report in reports %}
@@ -68,10 +69,11 @@
                     {% if request.session.role == 'admin' %}
                     <th>{{patient.patient_name}}</th>
                     {% else %}
-                    <th><a href = "{% url 'report' report.id %}">{{patient.patient_name}}</a></th>
+                    <th>{{patient.patient_name}}</th>
                     {% endif %}
                     <th>{{report.doctor}}</th>
                     <th>{{report.date}}</th>
+                    <th><a href = "{% url 'report' report.id %}"><span class="fa fa-arrow-right fa-lg"></span></th>
                 </tr>
             </tbody>
             {% endfor %}
