--- a/WebApp/templates/viewPatient.html
+++ b/WebApp/templates/viewPatient.html
@@ -1,96 +1,143 @@
 {% extends 'main.html' %}
 
 {% block content %}
-
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-
-<head>
-    <!-- Required meta tags always come first -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    
-    <title>Liver Disease Classification</title>
-</head>
-
-<body id="body">
-
-    <div class="container" id="breadcrumb">
-        <div class="row">
-            <ol class="col-12 breadcrumb">
-               <li class="breadcrumb-item"><a href="{% url 'patients' %}">Patients</a></li>
-               <li class="breadcrumb-item active">{{patient.patient_name}}</li>
-            </ol>
-        </div>
-    </div>
-    <!-- <h3>{{patient.patient_name}}</h3> -->
-    <div class="row row-content">
-        
-    <div class="col-md-6">
-        <div class="card">
-            <h3 class="card-header  text-black">{{patient.patient_name}}</h3>
-            <div class="card-body">
-                <dl class="row">
-                    <dt class="col-6">Full Name</dt>
-                    <dd class="col-6">{{patient.patient_name}}</dd>
-                    <dt class="col-6">Username</dt>
-                    <dd class="col-6">{{patient.username}}</dd>
-                    <dt class="col-6">Assigned Doctor</dt>
-                    <dd class="col-6">{{patient.assigned_doctor}}</dd>
-                    <dt class="col-6">Phone No.</dt>
-                    <dd class="col-6">{{patient.phone_num}}</dd>
-                    <dt class="col-6">Date of Birth</dt>
-                    <dd class="col-6">{{patient.birth_date}}</dd>
-                </dl>
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Dashboard - SB Admin</title>
+    </head>
+    <body class="sb-nav-fixed">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <!-- Navbar Brand-->
+            <a class="navbar-brand ps-3" href="index.html">DLDnet</a>
+            <!-- Sidebar Toggle-->
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <!-- Navbar Search-->
+            <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+                <div class="input-group">
+                    <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                    <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
+                </div>
+            </form>
+            <!-- Navbar-->
+            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#!">Settings</a></li>
+                        <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+                        <li><hr class="dropdown-divider" /></li>
+                        <li><a class="dropdown-item" href="#!">Logout</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            <div class="sb-sidenav-menu-heading">Records</div>
+                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                                Patients
+                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                            </a>
+                            <div class="sb-sidenav-menu-heading">Account</div>
+                            <a class="nav-link" href="{% url 'index' %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-user"></i></div>
+                                Profile
+                            </a>
+                        </div>
+                    </div>
+                    <div class="sb-sidenav-footer">
+                        <div class="small">Logged in as:</div>
+                        {{request.session.name}}
+                    </div>
+                </nav>
             </div>
-        </div>
-    </div>
-
-    <!-- <h4>Reports</h4> -->
-    
-    <div class="table-responsive col-md-6">
-        <table class="table table-striped">
-            <thead class="thead-light">
-                <tr>
-                    <th>Report ID</th>
-                    <th>Patient Name</th>
-                    <th>Pathologist</th>
-                    <th>Date</th>
-                    <th></th>
-                </tr>
-            </thead>
-            {% for report in reports %}
-            <tbody>
-                <tr>
-                    <th>{{report.id}}</th>
-                    <th>{{report.patient}}</th>
-                    <th>{{report.doctor}}</th>
-                    <th>{{report.date}}</th>
+            <div id="layoutSidenav_content">
+                <main>
+                    <div class="container-fluid px-4">
+                        <h1 class="mt-4">Patient View</h1>
+                        <ol class="breadcrumb mb-4">
+                            <li class="breadcrumb-item active"></li>
+                        </ol>
+                        <div class="card mb-4"> 
+                            <div class="card-header">
+                                <i class="fas fa-user me-1"></i>
+                                {{patient.patient_name}}
+                            </div>
+                            <div class="card-body">
+                                <dl class="row">
+                                    <dt class="col-6">Full Name</dt>
+                                    <dd class="col-6">{{patient.patient_name}}</dd>
+                                    <dt class="col-6">Username</dt>
+                                    <dd class="col-6">{{patient.username}}</dd>
+                                    <dt class="col-6">Assigned Doctor</dt>
+                                    <dd class="col-6">{{patient.assigned_doctor}}</dd>
+                                    <dt class="col-6">Phone No.</dt>
+                                    <dd class="col-6">{{patient.phone_num}}</dd>
+                                    <dt class="col-6">Date of Birth</dt>
+                                    <dd class="col-6">{{patient.birth_date}}</dd>
+                                </dl>
+                            </div>
+                        </div>
+                        <div class="card mb-4"> 
+                            <div class="card-header">
+                                <i class="fas fa-table me-1"></i>
+                                Reports
+                            </div>
+                            <div class="card-body">
+                                <table id="datatablesSimple">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Patient Name</th>
+                                            <th>Report Author</th>
+                                            <th>Date</th>
+                                        </tr>
+                                    </thead>
+                                    <tfoot>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>Patient Name</th>
+                                            <th>Report Author</th>
+                                            <th>Date</th>
+                                        </tr>
+                                    </tfoot>
+                                    <tbody>
+                                        {% for report in reports %}
+                                        <tr>
+                                            <th>{{report.id}}</th>
+                                            <th>{{report.patient}}</th>
+                                            <th>{{report.doctor}}</th>
+                                            <th>{{report.date}}</th>
+                                            {% if request.session.role == 'doctor' %}
+                                            <th><a href = "{% url 'report' report.id %}"><span class="fa fa-arrow-right fa-lg"></span></th>
+                                            {% endif %}
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                     {% if request.session.role == 'doctor' %}
-                    <th><a href = "{% url 'report' report.id %}"><span class="fa fa-arrow-right fa-lg"></span></th>
+                    <a href="{% url 'classify' patient.id %}">
+                        <button onclick="" type="submit" class="btn btn-primary">Generate Report</button>
+                    </a>
                     {% endif %}
-                </tr>
-            </tbody>
-            {% endfor %}
-        </table>
-    </div>
-    {% if request.session.role == 'doctor'%}
-    <div class="col-md-10 mt-5">
-        <a href="{% url 'classify' patient.id %}">
-            <button onclick="" type="submit" class="btn btn-primary">Generate Report</button>
-        </a>
-    </div>
-    <div class="col-md-2 mt-5">
-        <a href="{% url 'deletepatient' patient.id %}">
-            <button onclick="" type="submit" class="btn btn-danger">Archive Patient</button>
-        </a>
-    </div>
-
-    {% endif %}
-
-    {% if request.session.role == 'admin'%}
+                    <div class="col-md-2 mt-5">
+                        <a href="{% url 'deletepatient' patient.id %}">
+                            <button onclick="" type="submit" class="btn btn-danger">Archive Patient</button>
+                        </a>
+                    </div>
+                    {% if request.session.role == 'admin'%}
     <div class="row row-content">
         <form method="post">
             {% csrf_token %}
@@ -133,8 +180,21 @@
     {% endif %} -->
   </div>
     {% endif %}
-</body>
-
+                </main>
+                <footer class="py-4 bg-light mt-auto">
+                    <div class="container-fluid px-4">
+                        <div class="d-flex align-items-center justify-content-between small">
+                            <div class="text-muted">Copyright &copy; Property of Grad Boys</div>
+                            <div>
+                                <a href="#">Privacy Policy</a>
+                                &middot;
+                                <a href="#">Terms &amp; Conditions</a>
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+        </div>
+    </body>
 </html>
-
 {% endblock content %}
